# site-generator

./: Cargo.toml  README.md  index.html
src/: editor.rs  main.rs
src/elements/: button.rs  mod.rs
src/elements/buttons/: button.rs  buttonProperty.rs  mod.rs
src/models/: element.rs  mod.rs  page.rs
src/utils/: html_generator.rs
