[package]
name = "site-generator"
version = "0.1.0"
edition = "2024"
description = "Генератор сайтов с визуальным редактором"

[dependencies]
# Для UI
egui = "0.23"
eframe = "0.23"

# Для работы с файлами и шаблонами
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Для генерации уникальных идентификаторов
uuid = { version = "1.4", features = ["v4", "serde"] }

# Для работы с файловой системой
fs_extra = "1.3"

# Для логирования
log = "0.4"
env_logger = "0.10"